Create initial webact application
- allow to run arbitrary scripts on the server via a web interface

- provide arguments via text input or upload files

- schedule scripts to run periodically and notify via e-mail
